Change Log

perdition
Mail retrieval proxy server
Copyright (C) 1999-2001  Horms <horms@vergenet.net>
----------------------------------------------------------------------

xxx
(Horms)

  * xxx
  - Fixed problem with setting ssl_key_file.
  - Brief documentation for how to generate .pem files for SSL/TLS
  - Handle systems that don't have socklen_t


----------------------------------------------------------------------

29th April 2001
(Horms)

  * Version 0.1.9
  - Added SSL Support
  - Modified logging semantics to have Connect, Auth, and Close logs
    suitable for pop/imap-before-smtp. Carlos Canau & Matt Prigge
  - Added code to log source and destination IP address
    when in inetd mode. Carlos Canau
  - Added logging of reread or map library
  - Removed code that expands % to %25 in LDAP urls as it
    handles some RFC 1959 compliant URLS incorrectly by expanding
    out % that shouldn't be expanded. Erik R. Leo
  - Fixed typo in documentation that refered to log_facility
    as logging_facility. Matt Prigge
  - Added add_domain option. Chris Stratford
  - Documented that there is no implicit ^ or $ in regular expression
    maps.
  - Added -X|--lower_case option to convert usernames given by
    end users to lowercase.



----------------------------------------------------------------------

9th May 2001
(Horms)

  * Version 0.1.8
  *** NB: Several options and defaults have changed meaning ***
  - Fixed Segmentation Fault that occurs when reading strings that
    have a trainling whitespace during the authentication phase.
    Thanks to Ronny Cook
  - Fixed Linking Problems in MySQL, PostgresSQL and LDAP 
    map lookup libraries.
  - Fixed (minor) casting problems with using various popt calls
  - Correct handling of litereals quoted with \" characters in
    IMAP mode.
  - Removed mutiple calls to dlerror() for a single error
  - A modified S|strip_domain option such that domain may optionally be