@@ -25,7 +25,7 @@
 
 AC_INIT(makegdbm/makegdbm.c)
 AM_CONFIG_HEADER(config.h)
-AM_INIT_AUTOMAKE(perdition, 0.1.9)
+AM_INIT_AUTOMAKE(perdition, 0.1.10test1)
 
 AC_PROG_CC
 AC_PROG_LIBTOOL
